# poly-web3

./: .gitignore  CHANGELOG.md  README.md  README.zh.md  pyproject.toml  setup.py
examples/: example_redeem.py  example_split_merge.py
poly_web3/: __init__.py  clob_compat.py  const.py  log.py  schema.py
poly_web3/signature/: __init__.py  build.py  hash_message.py  secp256k1.py
poly_web3/web3_service/: __init__.py  api_client.py  base.py  deposit_wallet_service.py  eoa_service.py  proxy_service.py  safe_service.py
tests/: test_neg_risk_split_merge.py
